--- a/src/scss/card-sketch.scss
+++ b/src/scss/card-sketch.scss
@@ -4,46 +4,55 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 380px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.85);
   border-radius: 4px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
-  width: 300px;
-  padding: 60px 20px 20px 20px;
-  margin-top: 50px;
-}
-
-.card-sketch > *:not(:last-child) {
-  margin-bottom: 10px;
-}
-
-.card-sketch > img {
-  position: absolute;
-  top: -50px;
-  width: 100px;
-  height: 100px;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
 }
 
 .card-sketch > input {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
 }
 
-.card-sketch > .progress {
+.card-sketch__body {
+  display: flex;
+}
+
+.card-sketch__body img {
+  width: 116px;
+  height: 116px;
+  border-radius: 4px 0 0 0;
+}
+
+.card-sketch__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px 10px;
   width: 100%;
 }
 
-.card-sketch > .progress > .progress-bar {
-  background-color: $success;
+.card-sketch__info > *:not(:last-child) {
+  margin-bottom: 7px;
 }
 
 .card-sketch__btns {
-  width: 100%;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .card-sketch__btns > button {
-  padding: 5px 20px;
+  padding: 4px 30px;
+  border-radius: 2px;
+}
+
+.card-sketch .progress {
+  border-radius: 0 0 4px 4px;
+  height: 7px;
+}
+
+.card-sketch .progress .progress-bar {
+  background-color: $success;
 }
