--- a/src/components/pages/ComertialPurpose/Preview/Preview.scss
+++ b/src/components/pages/ComertialPurpose/Preview/Preview.scss
@@ -40,7 +40,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
 }
 
 .purposePre_quote-title {
@@ -84,6 +83,10 @@
 
 .purposePre_info {
     
+}
+
+.purposePre_info-item {
+    display: flex;
 }
 
 .purposePre_info-title {
@@ -137,7 +140,7 @@
 }
 
 .barcode {
-    margin-left: 30px;
+    margin-left: 5px;
 }
 
 .purposePre_subadress {
