--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -8,6 +8,16 @@
   padding-top: 15px;
 }
 
+.table-section {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 85%);
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.entity-page--section:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 .main-img--container {
   position: relative;
   z-index: 2;
