--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: start;
     max-width: 1200px;
+
+    @media (max-width: 1085px) {
+        justify-content: center;
+    }
 }
 
 .profile {
@@ -16,20 +20,34 @@
         &.card {
             border: none;
             background-color: #eee;
+
+            @media (max-width: 750px) {
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
+
+        
     }
-
     
-
     &__item {
         align-items: center;
         max-width: 460px;
+        min-width: 400px;
         padding-bottom: 5px;
         margin-bottom: 20px;
+
+        @media (max-width: 445px) {
+            min-width: 200px;
+        }
         
         .form-label {
             margin-bottom: 0;
             min-width: 150px;
+
+            @media (max-width: 445px) {
+                min-width: 100px;
+            }
         }
     }
 
