--- a/src/scss/breadcrumbs.scss
+++ b/src/scss/breadcrumbs.scss
@@ -9,12 +9,12 @@
 
 .breadcrumbs__breadcrumb-item:not(:last-child) > a:hover {
   text-decoration: underline;
-  font-weight: 700;
+  text-shadow: 0 0 1px black, 0 0 1px black;
   color: black;
 }
 
 .breadcrumbs__breadcrumb-item:last-child {
-  font-weight: 700;
+  text-shadow: 0 0 1px black, 0 0 1px black;
 }
 
 .breadcrumbs__breadcrumb-item:last-child > a:hover {
