--- a/src/scss/info-card.scss
+++ b/src/scss/info-card.scss
@@ -6,103 +6,122 @@
   grid-gap: 10px;
 }
 
+.info-card-group {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 10px;
+  width: 100%;
+}
+
 .info-card {
   position: relative;
   display: flex;
-  border: 1px solid black;
+  flex-direction: column;
   min-width: 350px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.85);
+  border-radius: 4px;
 }
 
 .info-card .info-card__edit {
   position: absolute;
   top: 5px;
   right: 5px;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  padding-left: 3px;
+  padding: 3px 3px 3px 5px;
 }
 
-.info-card > .form-check {
+.info-card > input {
   position: absolute;
-  top: 5px;
-  right: 5px;
-}
-
-.info-card > img {
-  object-fit: cover;
-  height: 120px;
-  min-width: 120px;
+  top: 10px;
+  right: 10px;
 }
 
 .info-card__body {
   display: flex;
+}
+
+.info-card__body img {
+  width: 116px;
+  height: 116px;
+  border-radius: 4px 0 0 0;
+}
+
+.info-card__info {
+  display: flex;
   flex-direction: column;
-  padding: 4px 10px;
+  align-items: center;
+  padding: 8px 10px;
   width: 100%;
 }
 
-.info-card__body > .progress {
-  margin-bottom: 16px;
-}
-
-.info-card__body > .progress {
-  width: 100%;
-  height: 7px;
-}
-
-.info-card__body > .progress > .progress-bar {
-  background-color: $success;
-}
-
-.info-card__body a {
-  display: block;
-  margin-bottom: 0;
-  text-decoration: none;
-  color: black;
-  background-color: $default;
-  border: 1px solid $default;
-  text-align: center;
-  font-weight: 700;
-  width: 100%;
-}
-
-.info-card__body a:hover {
-  border: 1px solid black;
-  color: white;
+.info-card__info > *:not(:last-child) {
+  margin-bottom: 7px;
 }
 
 .info-card__btns {
   display: flex;
-  justify-content: space-between;
-  gap: 5px;
-  height: 28px;
+  justify-content: center;
+  gap: 10px;
+  font-weight: bold;
+}
+
+.info-card__btns-one {
+  justify-content: center;
 }
 
 .info-card__btns > button {
-  max-width: 120px;
-  width: 100%;
-  padding: 0;
+  padding: 4px 30px;
+  border-radius: 2px;
 }
 
 .info-card__btns > a {
-  max-width: 120px;
-  background-color: $primary;
+  padding: 4px 30px;
+  border-radius: 2px;
+  text-decoration: none;
   color: white;
+  background-color: $primary;
   border: 1px solid transparent;
-  border-radius: 4px;
+}
+
+.info-card__btns > a:hover {
+  color: white;
+  border: 1px solid black;
+}
+
+.info-card .progress {
+  border-radius: 0 0 4px 4px;
+  height: 7px;
+}
+
+.info-card .progress .progress-bar {
+  background-color: $success;
+}
+.info-card__name {
+  max-width: 80%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* Dense style */
 .info-card_group.dense {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(116px, 1fr));
   justify-items: center;
 }
 
 .info-card_group.dense > .info-card {
+  min-width: 116px;
+  max-width: 116px;
+}
+
+.info-card_group.dense > .info-card > .info-card__body {
   flex-direction: column;
-  min-width: 0;
-  width: 200px;
+}
+
+.info-card_group.dense
+  > .info-card
+  > .info-card__body
+  > .info-card__info
+  > .info-card__btns {
+  flex-direction: column;
 }
 
 .info-card_group.dense > .info-card > img {
