--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -1,6 +1,12 @@
 .profile {
-    justify-content: center;
-    
+    &__container {
+        h3 {
+            padding: 0;
+            margin: 0;
+            margin-bottom: 20px;
+        }
+    }
+
     &__item {
         align-items: center;
         padding-bottom: 5px;
@@ -45,7 +51,7 @@
         display: flex;
         justify-content: center;
         margin-bottom: 10px;
-        
+        margin-left: 25px;
         & input[type="file"] {
             display: none;
         }
@@ -57,6 +63,7 @@
 
     &__button.btn {
         max-width: 150px;
+        margin-left: 25px;
         margin-right: auto;
         margin-top: 10px;
         i {
@@ -88,7 +95,7 @@
         }
 
         td {
-            margin-bottom: 25px;
+            margin-bottom: 30px;
         }
     }
 }
