--- a/src/scss/dashboard-page.scss
+++ b/src/scss/dashboard-page.scss
@@ -12,10 +12,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid black;
+  border: 2px solid;
+  border-radius: 4px;
   padding: 10px 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 100%;
+  background-color: white;
 }
 
 .dashboard-page__block > span {
