--- a/src/scss/info-card.scss
+++ b/src/scss/info-card.scss
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 10px;
+  padding: 0 15px 15px 15px;
 }
 
 .info-card-group {
