delete custom-field btn

--- a/src/scss/information-component.scss
+++ b/src/scss/information-component.scss
@@ -17,6 +17,7 @@
   margin-bottom: 5px;
 }
 .information--item .ui-kit__badge {
+  width: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
