fixed search loader in Lists

--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -132,6 +132,10 @@
   border: 1px solid black;
 }
 
+.list .sc-iwjdpV.kntihR > div {
+  padding: 24px 24px 39px 24px !important;
+}
+
 @media (max-width: 1024px) {
   .list__header {
     flex-direction: column;
