--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -1,10 +1,18 @@
 @import "./scss-variables.scss";
 
+.list {
+  background-color: white;
+  padding: 15px 0 0 0;
+  border-radius: 10px;
+  box-shadow: 0 0 0 1px #ddd;
+}
+
 .list__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  padding: 0 15px;
 }
 
 .list__header button {
@@ -52,6 +60,7 @@
   border: 1px solid #ced4da;
   border-radius: 4px;
   padding: 5px 15px;
+  width: 100%;
 }
 
 .list__options_btns {
@@ -121,6 +130,10 @@
 
 .list .table-view_btn:hover {
   border: 1px solid black;
+}
+
+.list .sc-iwjdpV.kntihR > div {
+  padding: 24px 24px 39px 24px !important;
 }
 
 @media (max-width: 1024px) {
