--- a/src/scss/breadcrumbs.scss
+++ b/src/scss/breadcrumbs.scss
@@ -9,12 +9,14 @@
 
 .breadcrumbs__breadcrumb-item:not(:last-child) > a:hover {
   text-decoration: underline;
-  text-shadow: 0 0 1px black, 0 0 1px black;
+  //text-shadow: 0 0 1px black, 0 0 1px black;
+  font-weight: bold;
   color: black;
 }
 
 .breadcrumbs__breadcrumb-item:last-child {
-  text-shadow: 0 0 1px black, 0 0 1px black;
+  //text-shadow: 0 0 1px black, 0 0 1px black;
+  font-weight: bold;
 }
 
 .breadcrumbs__breadcrumb-item:last-child > a:hover {
