--- a/src/scss/dropdownImageEdit.scss
+++ b/src/scss/dropdownImageEdit.scss
@@ -9,43 +9,41 @@
   top: 0;
   right: 0;
   transform: translate(50%, -50%);
+  & .edit-img__menu {
+    min-width: unset;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    & p {
+      margin-bottom: 0;
+    }
+    & img {
+      width: 100px;
+      height: 100px;
+    }
+    & .edit-img__menu.show {
+      display: flex !important;
+    }
+  }
 }
 
 .edit-img button {
   border: 0;
+  & button:hover,
+  & button:active,
+  & button:focus,
+  & button:active:focus {
+    border: 0;
+    box-shadow: none;
+  }
 }
-
-.edit-img button:hover,
-.edit-img button:active,
-.edit-img button:focus,
-.edit-img button:active:focus {
-  border: 0;
-  box-shadow: none;
-}
-
-.edit-img__btn img {
-  padding: 4px;
-  background-color: black;
-  border-radius: 25px;
-}
-.edit-img .edit-img__menu {
-  min-width: unset;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.edit-img__menu img {
-  width: 100px;
-  height: 100px;
-}
-
-.edit-img__menu p {
-  margin-bottom: 0;
-}
-
-.edit-img__menu.show {
-  display: flex !important;
+.edit-img__btn {
+  background: transparent;
+  & img {
+    padding: 4px;
+    background-color: black;
+    border-radius: 25px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -53,18 +51,11 @@
     flex-direction: column;
   }
 }
-// .edit-img__btn {
-//   color: white;
-//   background-color: black;
-//   border-radius: 50%;
-// }
+
 .edit-img__icon {
   font-size: 12px;
   padding: 6px;
   border-radius: 50%;
   background-color: black;
   color: white;
-}
-.edit-img__btn {
-  background: transparent;
 }
