--- a/src/scss/CRMEntity.scss
+++ b/src/scss/CRMEntity.scss
@@ -1,16 +1,25 @@
+@import "./scss-variables.scss";
+
 .entity-page {
-  .entity-page--header {
+  &--header {
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid;
   }
-  .entity-page--section {
+
+  &--section {
     padding-top: 15px;
     &:not(:last-child) {
       margin-bottom: 20px;
     }
   }
+
+  &--img {
+    width: 100%;
+    height: 100%;
+  }
+
   .main-img--container {
     position: relative;
     z-index: 2;
@@ -18,9 +27,51 @@
     height: 90px;
     margin-right: 15px;
   }
-  .entity-page--img {
-    width: 100%;
-    height: 100%;
+
+  .page--information {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .information--item {
+    display: flex;
+    height: 25px;
+    &:not(:last-child) {
+      margin-bottom: 5px;
+    }
+    .ui-kit__badge {
+      width: fit-content;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      word-wrap: break-word;
+      font-weight: 500;
+      height: 100%;
+
+      font-size: 0.9rem;
+      padding: 3px 6px;
+      border-radius: 5px;
+      margin-bottom: 2px;
+      display: inline-block;
+      white-space: nowrap;
+      background: $default;
+      color: black;
+    }
+    .ui-kit__badge.field-value {
+      font-weight: 400;
+      text-align: left;
+      padding-left: 0;
+      padding-right: 0;
+      background-color: white;
+      text-transform: none;
+      margin-left: 5px;
+      color: black;
+    }
+  }
+  .information--list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
 
@@ -31,6 +82,7 @@
   line-height: 23px;
   letter-spacing: 0em;
 }
+
 .page-subtitle {
   text-transform: capitalize;
   font-size: 16px;
@@ -41,23 +93,3 @@
   text-align: left;
   margin-bottom: 15px;
 }
-
-// .attached-files--list {
-//   display: flex;
-//   flex-direction: column;
-//   flex-wrap: wrap;
-
-//   margin-bottom: -20px;
-// }
-// .attached-files--item {
-//   margin-bottom: 20px;
-// }
-// @media screen and (min-width: 1024px) {
-//   .attached-files--item {
-//     max-width: 380px;
-//     margin-right: 20px;
-//   }
-//   .attached-files--list {
-//     flex-direction: row;
-//   }
-// }
