--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -48,101 +48,205 @@
   .sc-iwjdpV.kntihR > div {
     padding: 24px 24px 39px 24px !important;
   }
-}
 
-.list__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-  padding: 0 15px;
-
-  button {
-    background: white;
-    border: 1px solid transparent;
-    border-radius: 4px;
+  .pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin-top: 20px;
     padding: 0;
-  }
-}
 
-.list__title {
-  display: flex;
-  align-items: center;
-  gap: 15px;
+    a {
+      cursor: default;
+      padding: 10px;
+      border-radius: 5px;
+      color: black;
+      margin: 0 5px;
+      text-decoration: none;
+    }
+    li:not(.disabled) a:hover {
+      background-color: $default;
+      color: black;
+      cursor: pointer;
+    }
+    li a {
+      font-weight: bold;
+    }
+    li.active a {
+      background: $default;
+    }
+    li.disabled a {
+      pointer-events: none;
+      color: rgb(198, 197, 202);
+    }
 
-  > h3 {
-    margin-bottom: 0;
-  }
+    @media (max-width: 600px) {
+      a {
+        padding: 5px;
+      }
+    }
 
-  > button {
-    background: $success;
-    color: white;
-    width: 30px;
-    height: 30px;
-  }
-}
-
-.list__options {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 25px;
-
-  .form-label {
-    margin-bottom: 0;
-  }
-}
-
-.list__select-entity {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.list__search {
-  border: 1px solid #ced4da;
-  border-radius: 4px;
-  padding: 5px 15px;
-  width: 100%;
-}
-
-.list__options_btns {
-  display: flex;
-  gap: 5px;
-  justify-content: space-between;
-  align-items: center;
-
-  > .list__add-btn {
-    background-color: $primary;
-    color: white;
+    @media (max-width: 490px) {
+      a {
+        margin: 0;
+      }
+    }
   }
 
-  > button.active {
-    border: 1px solid black;
-  }
-}
-
-@media (max-width: 750px) {
-  .list__search {
-    margin-bottom: 10px;
-  }
-  .list__options {
-    flex-direction: column;
+  .custom-pagination--nav {
+    display: flex;
+    flex: 1 1 auto;
+    justify-content: flex-end;
     align-items: center;
+    padding-right: 8px;
+    padding-left: 8px;
     width: 100%;
-    gap: 5px;
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 13px;
+    min-height: 56px;
+    background-color: #ffffff;
   }
 
-  .list table td {
-    padding: 2px;
+  .custom-pagination--buttons {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 4px;
+    white-space: nowrap;
   }
-}
 
-@media (max-width: 1024px) {
+  .custom-pagination--btn {
+    background-color: transparent;
+    position: relative;
+    display: block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: none;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    padding: 8px;
+    margin: 0px;
+    transition: 0.4s;
+    color: rgba(0, 0, 0, 0.54);
+    fill: rgba(0, 0, 0, 0.54);
+    cursor: pointer;
+    &:hover:not(:disabled),
+    &:focus:not(:disabled) {
+      background: rgba(0, 0, 0, 0.12);
+    }
+    &:disabled {
+      cursor: unset;
+      color: rgba(0, 0, 0, 0.18);
+      fill: rgba(0, 0, 0, 0.18);
+    }
+  }
+
+  .custom-pagination--current-elements {
+    margin: 0px 24px;
+  }
+
   .list__header {
-    flex-direction: column;
-  }
-  .list__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 10px;
+    padding: 0 15px;
+
+    button {
+      background: white;
+      border: 1px solid transparent;
+      border-radius: 4px;
+      padding: 0;
+    }
+
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
+  }
+
+  .list__title {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    > h3 {
+      margin-bottom: 0;
+    }
+
+    > button {
+      background: $success;
+      color: white;
+      width: 30px;
+      height: 30px;
+    }
+
+    @media (max-width: 1024px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  .list__options {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 25px;
+
+    .form-label {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: 750px) {
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      gap: 5px;
+    }
+  }
+
+  .list__select-entity {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .list__search {
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    padding: 5px 15px;
+    width: 100%;
+
+    @media (max-width: 750px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  .list__options_btns {
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
+    align-items: center;
+
+    > .list__add-btn {
+      background-color: $primary;
+      color: white;
+    }
+
+    > button.active {
+      border: 1px solid black;
+    }
+  }
+
+  @media (max-width: 750px) {
+    table td {
+      padding: 2px;
+    }
   }
 }
