--- a/src/ui/__variables.scss
+++ b/src/ui/__variables.scss
@@ -1,3 +1,10 @@
-.r {
-    
-}
+$primary: #3f6ad8;
+$secondary: #6c757d;
+$success: #3ac47d;
+$info: #16aaff;
+$warning: #f7b924;
+$danger: #d92550;
+$focus: #444054;
+$alt: #794c8a;
+$light: #eee;
+$dark: #343a40;
