--- a/src/ui/__variables.scss
+++ b/src/ui/__variables.scss
@@ -3,8 +3,10 @@ $secondary: #6c757d;
 $success: #3ac47d;
 $info: #16aaff;
 $warning: #f7b924;
-$danger: #d92550;
+$danger: #ee426a;
 $focus: #444054;
 $alt: #794c8a;
 $light: #fbfbfb;
 $dark: #343a40;
+$darkGray: #444;
+$softBlue: #e0f3ff;
