--- a/src/ui/buttons/index.scss
+++ b/src/ui/buttons/index.scss
@@ -9,10 +9,8 @@
     user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
     line-height: 1.5;
-    border-radius: 0.25rem;
+    border-radius: 5px;
     transition: color 0.15s,background-color 0.15s,border-color 0.15s,box-shadow 0.15s;
 
     &-primary {
@@ -44,5 +42,9 @@
     }
     &-dark {
         background-color: $dark;
+    }
+
+    .fa-edit, .fa-trash-alt {
+        font-size: 14px;
     }
 }
