--- a/src/ui/buttons/index.scss
+++ b/src/ui/buttons/index.scss
@@ -10,8 +10,14 @@
     background-color: transparent;
     border: 1px solid transparent;
     line-height: 1.5;
+    padding: 3px 6px;
     border-radius: 5px;
-    transition: color 0.15s,background-color 0.15s,border-color 0.15s,box-shadow 0.15s;
+    transition: all 0.3s ease;
+
+    > a {
+        border-radius: 5px;
+        line-height: 1.5;
+    }
 
     &-primary {
         background-color: $primary;
