update selects, inputs

--- a/src/pages/ComertialPurpose/ComertialPurpose.scss
+++ b/src/pages/ComertialPurpose/ComertialPurpose.scss
@@ -6,7 +6,7 @@
 
     input, textarea {
         border: none !important;
-        background-color: #efefef;
+        background-color: #fafafa;
     }
 
     &__title {
