--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -4,7 +4,7 @@
   .progress {
     width: 100%;
     > .progress-bar {
-      background-color: #c7a62d;
+      background-color: #dab738;
     }
   }
 
