--- a/src/scss/not-found-page.scss
+++ b/src/scss/not-found-page.scss
@@ -1,11 +1,9 @@
 .not-found-banner {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .not-found-banner > a {
