update ui (progress bar, borders, lists)

--- a/src/ui/tables/tables.scss
+++ b/src/ui/tables/tables.scss
@@ -19,7 +19,8 @@
     & .rdt_TableBody {
       & .rdt_TableRow {
         border: none;
-        & .rdt_TableCell {
+        & .rdt_TableCell {          
+          font-size: 14px;
           color: $darkGray;
         }
         &:nth-of-type(odd) {
