--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -19,6 +19,7 @@
     .form-label {
       margin-bottom: 0;
       min-width: 150px;
+      font-size: 10px;
 
       @media (max-width: 445px) {
         min-width: 100px;
