--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -174,6 +174,10 @@ ul {
   .modal-body > form > div > div {
     position: relative;
   }
+  .modal-body > form .form-label{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
 
   .modal-body > form > div small {
     position: absolute;
