--- a/src/ui/buttons/buttons.scss
+++ b/src/ui/buttons/buttons.scss
@@ -1,7 +1,11 @@
 @import '../_variables.scss';
 
 .ui-btn {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 32px;
+    min-height: 32px;
     font-weight: 400;
     color: #fff;
     text-align: center;
@@ -10,7 +14,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     line-height: 1.5;
-    padding: 3px 6px;
+    padding: 3px 7px;
     border-radius: 5px;
     transition: all 0.3s ease;
 
@@ -20,7 +24,7 @@
     }
 
     &-primary {
-        background-color: $primary;
+        background-color: $info;
     }
     &-secondary {
         background-color: $secondary;
