--- a/src/pages/ComertialPurpose/ComertialPurposePrint.scss
+++ b/src/pages/ComertialPurpose/ComertialPurposePrint.scss
@@ -57,6 +57,10 @@
     }
 
     .purpose__quote {
+        textarea {
+            margin-bottom: 10px;
+        }
+        
         input {
             text-align: right;
         }
