--- a/src/pages/Users/Users.scss
+++ b/src/pages/Users/Users.scss
@@ -22,6 +22,11 @@
   &__button {
       display: flex;
       justify-content: end;
+      padding: 5px 10px;
+
+      i {
+        margin-right: 5px;
+      }
   }
 
   &__loader {
