--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -130,7 +130,7 @@ ul {
       }
 
       .fa-ul li {
-        height: 40px;
+        margin-bottom: 30px;
       }
 
       > ul > li > a > i {
@@ -512,6 +512,10 @@ ul {
   margin-bottom: 20px;
 }
 
+.dashboard-page__section h3 {
+  margin-bottom: 15px;
+}
+
 .dashboard-page__block-wrapper {
   display: flex;
   gap: 15px;
@@ -524,13 +528,14 @@ ul {
   align-items: center;
   border: 1px solid #dedede;
   border-radius: 4px;
-  padding: 10px 50px;
+  padding: 25px 50px;
   width: 100%;
   background-color: white;
 }
 
 .dashboard-page__block > span {
   font-weight: bold;
+  font-size: 2rem;
 }
 
 .dashboard-page__block .dashboard-page__block-edit {
